# web_ui_helper

./: .gitmodules  CMakeLists.txt  LICENSE
doc/: README.txt  TODO.txt
src/web_ui/: compressor.h  html2header.cc
src/web_ui/detail/: base64.h  split.h
test/: base64.cc  parse_html.cc
test/content/: compressed.html  index.html  javascript.js  style.css
